--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -93,11 +93,14 @@
 /*===========================
      01.COMMON CSS 
 ===========================*/
-@import url("https://fonts.googleapis.com/css2?family=Fahkwang:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Fahkwang:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-  --font-fahkwang: "Fahkwang", sans-serif;
-  --font-unbounded: "Unbounded", sans-serif;
+  /* --font-fahkwang: "Fahkwang", sans-serif; */
+  /* --font-unbounded: "Unbounded", sans-serif; */
+  --font-fahkwang: "Lato", sans-serif;
+  --font-unbounded: "Roboto", sans-serif;
   --primary-color: #EC6219;
   --primary-color2: #F4CB0A;
   --primary-color3: #1A1A1A;
@@ -1581,11 +1584,14 @@ body:not(.is-mobile) .tt-style-switch:hover {
   width: 0;
   height: 0;
   border-radius: 50%;
-  background-color: var(--primary-color);
+  /* background-color: var(--primary-color); */
+   background-color: #F4CB0A;
   transition: all 0.6s;
   transform: translate(-50%, -50%);
   z-index: -1;
 }
+
+
 
 .circle-btn:hover {
   color: var(--white-color);
@@ -10127,31 +10133,36 @@ footer.home6-footer .footer-btm .terms-condition p a:hover {
   background-repeat: no-repeat;
   padding: 150px 0 56px;
 }
+
 @media (min-width: 1400px) and (max-width: 1599px) {
   .home2-banner-area {
     padding: 200px 0 70px;
   }
 }
+
 .home2-banner-area .banner-content-wrap h1 {
   color: var(--white-color);
   font-family: var(--font-unbounded);
   font-size: 90px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1.2;
   margin-bottom: 60px;
 }
+
 @media (min-width: 1400px) and (max-width: 1599px) {
   .home2-banner-area .banner-content-wrap h1 {
     font-size: 80px;
   }
 }
+
 @media (max-width: 1399px) {
   .home2-banner-area .banner-content-wrap h1 {
-    font-size: 65px;
+    font-size: 75px;
     margin-bottom: 45px;
-  
+
   }
 }
+
 @media (max-width: 1199px) {
   .home2-banner-area .banner-content-wrap h1 {
     font-size: 55px;
@@ -10167,7 +10178,8 @@ footer.home6-footer .footer-btm .terms-condition p a:hover {
 }
 
 .home2-banner-area .banner-content-wrap h1 span {
-  font-family: var(--font-fahkwang);
+  /* font-family: var(--font-fahkwang); */
+  font-family: "Fahkwang";
   font-weight: 400;
   display: block;
 }
@@ -10970,7 +10982,8 @@ footer.home6-footer .footer-btm .terms-condition p a:hover {
   color: var(--title-color);
   font-family: var(--font-unbounded);
   font-size: 30px;
-  font-weight: 400;
+  /* font-weight: 400; */
+  font-weight: 600;
   margin-bottom: 16px;
 }
 
@@ -10983,8 +10996,10 @@ footer.home6-footer .footer-btm .terms-condition p a:hover {
 .home2-process-section .single-process .content p {
   color: var(--paragraph-color);
   font-family: var(--font-unbounded);
+  /* font-family: "Lato"; */
   font-size: 16px;
   font-weight: 400;
+  /* font-weight: 600; */
   line-height: 26px;
   margin-bottom: 25px;
 }
@@ -11006,8 +11021,9 @@ footer.home6-footer .footer-btm .terms-condition p a:hover {
   align-items: center;
   color: var(--paragraph-color);
   font-family: var(--font-unbounded);
+
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 400;
   margin-bottom: 10px;
 }
 
@@ -11198,7 +11214,8 @@ footer.home6-footer .footer-btm .terms-condition p a:hover {
 }
 
 .home2-portfolio-section .section-title .dash-and-paragraph .btn-and-paragraph {
-  margin-top: -35px;
+  /* margin-top: -35px; */
+  margin-top: 0;
 }
 
 @media (max-width: 991px) {
@@ -11267,7 +11284,8 @@ footer.home6-footer .footer-btm .terms-condition p a:hover {
   color: var(--white-color);
   font-family: var(--font-unbounded);
   font-size: 14px;
-  font-weight: 500;
+  /* font-weight: 500; */
+  font-weight: 600;
   background-color: rgba(0, 0, 0, 0.5);
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 50px;
@@ -11347,7 +11365,8 @@ footer.home6-footer .footer-btm .terms-condition p a:hover {
   color: var(--white-color);
   font-family: var(--font-unbounded);
   font-size: 22px;
-  font-weight: 500;
+  /* font-weight: 500; */
+  font-weight: 800;
   line-height: 1.4;
   text-transform: capitalize;
   transition: 0.5s;
